--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+// Fonts
+@import "assets/styles/fonts";
+
+// General classes
+.container {
+  padding: 0 60px;
+}
+
+body {
+  font-size: 14px;
+  margin: 0;
+}
